Document the reusable api and the jdk flags datafilter needs
The resolution of a user's allowed locations is now a public entry point,
AllowedLocationAccessUtil.getAccessibleLocations(), so another module can scope
its own data to the same locations instead of parsing the user property again.
The billing module's billing_locationBasedBillingFilter does exactly that, so
document how to write such a listener, and why isRestricted() and an empty set
of location ids have to stay distinguishable.

Also opens java.lang and java.lang.reflect for the tests. datafilter adds
hibernate's filter annotations to entity classes by reflection, which the
module system denies from jdk 9 onwards, and a server running it needs the same
flags. They are necessary but not sufficient for AllowedLocationFilterTest,
which additionally wants a datafilter newer than 2.2.0 on this platform
version; the comment on the surefire configuration records where that stands.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>